[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/debug/rect_16.png" type="Texture" id=1]
[ext_resource path="res://src/Items/GroundItem.gd" type="Script" id=2]
[ext_resource path="res://src/Characters/Interactions/PickupInteraction.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.1294

[sub_resource type="Animation" id=2]
resource_name = "_reset"
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "pick_up"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="GroundItem" type="Area2D"]
collision_layer = 8
script = ExtResource( 2 )
image = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PickupInteraction" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/_reset = SubResource( 2 )
anims/pick_up = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
